--- a/sample/SampleInjector/SampleInjector.csproj
+++ b/sample/SampleInjector/SampleInjector.csproj
@@ -13,6 +13,12 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\..\src\InjectDotnet\InjectDotnet.csproj" />
+  </ItemGroup>	
+	
+  <ItemGroup>
+    <None Update="dotnet.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
