--- a/sample/SampleInjector/SampleInjector.csproj
+++ b/sample/SampleInjector/SampleInjector.csproj
@@ -19,6 +19,9 @@
     <None Update="dotnet.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sample.runtimeconfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
