Add more error handling

--- a/src/InjectDotnet.NativeHelper/InjectDotnet.NativeHelper.csproj
+++ b/src/InjectDotnet.NativeHelper/InjectDotnet.NativeHelper.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <Platforms>AnyCPU;x86;x64</Platforms>
   </PropertyGroup>
 
