Add a trampoline for NativeHook and ExportHook types

--- a/sample/SampleInjected/Properties/launchSettings.json
+++ b/sample/SampleInjected/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     },
     "DebugNative_x86": {
       "commandName": "Executable",
-      "executablePath": "C:\\Windows\\notepad.exe"
+      "executablePath": "C:\\Users\\mbuca\\Documents\\HxD\\HxD32.exe"
     }
   }
 }
