--- a/src/InjectDotnet.NativeHelper/InjectDotnet.NativeHelper.csproj
+++ b/src/InjectDotnet.NativeHelper/InjectDotnet.NativeHelper.csproj
@@ -1,11 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <Platforms>x86;x64</Platforms>
+	<Title>InjectDotnet.NativeHelper</Title>
+	<Version>0.1.2</Version>
+	<Authors>MrGneissGuy</Authors>
+	<Description>Hook native x86 and x64 processes with managed code</Description>
+	<ProjectUrl>https://github.com/Mbucari/InjectDotnet</ProjectUrl>
+	<PackageProjectUrl>https://github.com/Mbucari/InjectDotnet</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/Mbucari/InjectDotnet</RepositoryUrl>
+	<PackageProjectUrl>https://github.com/Mbucari/InjectDotnet</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/Mbucari/InjectDotnet</RepositoryUrl>
+	<TargetFramework>net6.0-windows</TargetFramework>
+	<ImplicitUsings>enable</ImplicitUsings>
+	<Nullable>enable</Nullable>
+	<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+	<Platforms>x64;x86</Platforms>
+	<PublishRepositoryUrl>true</PublishRepositoryUrl>
+	<EmbedUntrackedSources>true</EmbedUntrackedSources>
+	<DebugType>embedded</DebugType>
+	<RepositoryType>Git</RepositoryType>
+	<NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
+	
+  <ItemGroup>
+	 <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+  </ItemGroup>
 
 </Project>
