--- a/src/InjectDotnet/InjectDotnet.csproj
+++ b/src/InjectDotnet/InjectDotnet.csproj
@@ -1,11 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>InjectDotnet</Title>
+	<Version>0.1.2</Version>
+	<Authors>MrGneissGuy</Authors>
+    <Description>Inject .NET Core Dlls into x86/x64 native processes</Description>
+    <ProjectUrl>https://github.com/Mbucari/InjectDotnet</ProjectUrl>
+    <PackageProjectUrl>https://github.com/Mbucari/InjectDotnet</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Mbucari/InjectDotnet</RepositoryUrl>
+	<PackageProjectUrl>https://github.com/Mbucari/InjectDotnet</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/Mbucari/InjectDotnet</RepositoryUrl>
     <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <Platforms>x64;x86</Platforms>
+	<PublishRepositoryUrl>true</PublishRepositoryUrl>
+	<EmbedUntrackedSources>true</EmbedUntrackedSources>
+	<DebugType>embedded</DebugType>
+	<RepositoryType>Git</RepositoryType>
+	<NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+  </ItemGroup>
 </Project>
