Don't use ExitThread and document the loader asm instructions

--- a/.github/workflows/injectdotnet.yml
+++ b/.github/workflows/injectdotnet.yml
@@ -1,9 +1,9 @@
 name: Publish InjectDotnet
+name: release
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    tags:
+      - 'v*'
     
 jobs:
   publish:
