--- a/src/InjectDotnet/InjectDotnet.csproj
+++ b/src/InjectDotnet/InjectDotnet.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Title>InjectDotnet</Title>
-	<Version>0.1.2.1</Version>
+	<Version>0.2.0</Version>
 	<Authors>MrGneissGuy</Authors>
     <Description>Inject .NET Core Dlls into x86/x64 native processes</Description>
     <ProjectUrl>https://github.com/Mbucari/InjectDotnet</ProjectUrl>
@@ -19,6 +19,10 @@
 	<DebugType>embedded</DebugType>
 	<RepositoryType>Git</RepositoryType>
 	<NeutralLanguage>en</NeutralLanguage>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Platform)'=='x64'">
+	<DefineConstants>$(DefineConstants);X64</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
