--- a/src/InjectDotnet/InjectDotnet.csproj
+++ b/src/InjectDotnet/InjectDotnet.csproj
@@ -25,6 +25,10 @@
 	<DefineConstants>$(DefineConstants);X64</DefineConstants>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Platform)'=='x86'">
+	<DefineConstants>$(DefineConstants);X86</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
