--- a/src/InjectDotnet.NativeHelper/InjectDotnet.NativeHelper.csproj
+++ b/src/InjectDotnet.NativeHelper/InjectDotnet.NativeHelper.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	<Title>InjectDotnet.NativeHelper</Title>
-	<Version>0.3.3</Version>
+	<Version>0.4.0</Version>
 	<Authors>MrGneissGuy</Authors>
 	<Description>Hook native x86 and x64 processes with managed code</Description>
 	<ProjectUrl>https://github.com/Mbucari/InjectDotnet</ProjectUrl>
@@ -10,8 +10,7 @@
 	<RepositoryUrl>https://github.com/Mbucari/InjectDotnet</RepositoryUrl>
 	<PackageProjectUrl>https://github.com/Mbucari/InjectDotnet</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/Mbucari/InjectDotnet</RepositoryUrl>
-	<TargetFramework>net6.0-windows7.0</TargetFramework>
-	<Nullable>enable</Nullable>
+	<TargetFrameworks>net8.0-windows7.0;net6.0-windows7.0;netstandard2.1;netstandard2.0</TargetFrameworks>	
 	<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	<Platforms>x64;x86</Platforms>
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -29,8 +28,19 @@
     <DefineConstants>$(DefineConstants);X86</DefineConstants>
   </PropertyGroup>
 	
-  <ItemGroup>
-	 <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-  </ItemGroup>
-
+	<PropertyGroup Condition="'$(TargetFramework)' != 'netstandard2.0'">
+		<Nullable>enable</Nullable>
+		<DefineConstants>$(DefineConstants);NULLABLE</DefineConstants>
+	</PropertyGroup>
+	
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+		<PackageReference Include="System.Memory" Version="4.5.5" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	</ItemGroup>
 </Project>
